# final_consonant_formatter_cli

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
LICENSES/: MIT.txt
src/fc_formatter_cli/: __init__.py  cli.py
